[gd_scene load_steps=6 format=3 uid="uid://ds7w2tjndb0os"]

[ext_resource type="Script" uid="uid://bsgvi2v84at3s" path="res://enemy/walker/followy_walker.gd" id="1_slthc"]
[ext_resource type="Texture2D" uid="uid://t0cralsd0ri1" path="res://shapes/red_sqaure.png" id="2_du3xm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5ahg8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_du3xm"]
radius = 242.019

[sub_resource type="CircleShape2D" id="CircleShape2D_slthc"]
radius = 142.056

[node name="FollowyWalker" type="RigidBody2D"]
collision_layer = 4
collision_mask = 12
lock_rotation = true
linear_damp_mode = 1
script = ExtResource("1_slthc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5ahg8")

[node name="TooFarRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="TooFarRange"]
shape = SubResource("CircleShape2D_du3xm")

[node name="TooCloseRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="TooCloseRange"]
shape = SubResource("CircleShape2D_slthc")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.617455, 0.617455, 0.617455, 1)
rotation = 0.785398
scale = Vector2(0.84, 0.84)
texture = ExtResource("2_du3xm")

[node name="Sprite2D2" type="Sprite2D" parent="Sprite2D"]
modulate = Color(1, 1, 1, 0.415686)
show_behind_parent = true
rotation = 0.785398
scale = Vector2(0.99, 0.99)
texture = ExtResource("2_du3xm")

[connection signal="body_entered" from="TooFarRange" to="." method="_on_too_far_range_body_entered"]
[connection signal="body_exited" from="TooFarRange" to="." method="_on_too_far_range_body_exited"]
[connection signal="body_entered" from="TooCloseRange" to="." method="_on_too_close_range_body_entered"]
[connection signal="body_exited" from="TooCloseRange" to="." method="_on_too_close_range_body_exited"]
